--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!Doctype html>
 <html>
 
+<--!
+don't hard code with absolute positioning. ues % instead
+
+>
 
 <head>
     <meta charset="utf-8">
@@ -17,6 +21,12 @@
  
 
 <body>
+<script src="script.js"></script>
+
+
+
+
+
 
 
 
