--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ don't hard code with absolute positioning. ues % instead
     <link href="stylesheet.css" rel="stylesheet" type="text/css">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
+    
 
 
 </head>
@@ -28,12 +29,11 @@ don't hard code with absolute positioning. ues % instead
 
 
 
-
-
 <div id="header">
     <div class="title">maryam khalili</div>
 </div>
     
+
 
 
 
@@ -73,21 +73,22 @@ don't hard code with absolute positioning. ues % instead
 <div id="box3">
     <p class="title2">my projects</p>
 
-    <a href="https://youtu.be/eT2CrMHz3qY"><div id="box3_1">
+    <div id="box3_1">
 
 
-    </div></a>
+    </div>
 
+    <a href="https://youtu.be/eT2CrMHz3qY"><div id="btn"></div></a>
 </div>
 
 
 
 
 
+<img id="theImage" src="https://cdn.pixabay.com/photo/2019/12/20/17/15/yoda-4708878_1280.jpg">
 
-
-
-
+<a href="javascript:setImageVisible('theImage', true)">show image</a>
+<a href="javascript:setImageVisible('theImage', false)">hide image</a>
 
 
 
