--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ don't hard code with absolute positioning. ues % instead
 
 
 <div id="box2">
-    <div id="welcome"><br><br>hello world! i'm a developer.<br> ;) </div>
+    <div id="welcome"><br><br>my name is maryam. i code and stuff...<br> ;) </div>
     
     <div id="box2_1">
         > here i will talk a bit about myself <br>
