added some random facts

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           
 
           <ul id="menu">
-            <a href="#"><li>Me</li></a>
-            <a href="#resume"><li>Résumé</li></a>
+            <a href="#"><li>Chonk</li></a>
+            <a href="#facts"><li>Random Facts</li></a>
             <a href="#projects"><li>Projects</li></a>
           </ul>
         </div>
@@ -52,14 +52,29 @@
 
 
 <div id="about">
-    <div class="title" id="resume"><br><br>my name is maryam. i code and stuff.<br> ;) </div>
+    <div class="title" id="facts"><br><br>my name is maryam. i code and stuff.<br> ;) </div>
     
     <div id="about_me">
-        > here i will talk a bit about myself <br>
-        > and my education <br>
-        > and my interests <br>
-        > and the dark side of the force <br>
-        > and 5 reasons why Darth Vader is cooler than Anakin Skywalker
+        > here i will talk a bit about myself and mention some random facts that you don't have to agree with<br>
+        > ... <br>
+        > my name is maryam <br>
+        > i rarely use capital letters <br>
+        > sometimes i study computer science <br>
+        > ... <br>
+        > starbucks is overrated <br>
+        > turkey is the most amazing country to have ever existed <br>
+        > inception > tent <br>
+        > ants are the best creatures <br>
+        > tea >>>> coffee <br>
+        > having two finals on the same day should be illegal <br>
+        > zoom university isn't THAT bad <br>
+        > the two pieces of celery they always bring with chicken wings are mysterious <br>
+        > yas mall >>> alwahda mall <br>
+        > cats are the best because they are elegant, have a sense of personal space, have standards, don't bother with anything
+        you are more likely to die from happiness
+        if a cat likes you than when a dog does. fight me. <br>
+        > ... <br>
+        > more facts to follow please see my projects byee :) <br>
     </div>
 
 </div>
