--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         > zoom university isn't THAT bad <br>
         > the two pieces of celery they always bring with chicken wings are mysterious <br>
         > yas mall >>> alwahda mall <br>
-        > cats are the best because they are elegant, have a sense of personal space, have standards, don't bother with anything
+        > cats are the best because they are elegant, have a sense of personal space, have standards, don't bother with anything, and
         you are more likely to die from happiness
         if a cat likes you than when a dog does. fight me. <br>
         > ... <br>
